fix fancy menu on safari and ff

--- a/src/css/menus.styl
+++ b/src/css/menus.styl
@@ -76,13 +76,14 @@ header
       box-shadow: 2px 4px 2px .5px $shadowColor2
       pointer-events: none
       transform-origin: top center
-      transform: translateX(-50%) translateY(2 * $spacing)
+      margin-top: 2 * $spacing
+
       opacity: 0
 
       &.active
         pointer-events: auto
         transition: all ($transitionTime * .75) ease-in-out, opacity $transitionTime ease-in-out
-        transform: translateX(-50%) translateY(0)
+        margin-top: 0
         opacity: 1
 
       &:before
@@ -101,24 +102,26 @@ header
         left: 0
         height: 100%
         width: 100%
+        pointer-events: none
 
         .menu-body
           color: $textColor2
           height: 100%
-          width: 100%
+          max-width: 100vw
+          width: 400px
           position: absolute
           left: 0
           overflow: hidden
           opacity: 0
-          transition: opacity ($transitionTime * .75) ease-in-out
+          transition: opacity ($transitionTime * .5) ease-in-out
+          pointer-events: none
 
           .menu-content
             display: table
             position: absolute
             left: 0
             top: 0
-            max-width: 100%
-            width: 400px
+            width: 100%
             padding: $spacing 2 * $spacing
             background-color: $backgroundColor1
             max-height: 'calc(100vh - %s - %s)' % ($headerHeight (2 * $spacing))
@@ -130,6 +133,8 @@ header
 
           &.active
             opacity: 1
+            transition: opacity ($transitionTime) ease-in-out
+            pointer-events: auto
 
             &.from-left
               .menu-content
@@ -158,6 +163,10 @@ header
       color: $textColor2
       display: table
       width: 100%
+      font-size: 0
+
+      & > *
+        font-size: 1rem
 
     .menu-link-icon
     .menu-link-text
